<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginModel"
            type="me.aleksandarzekovic.quizbox.data.models.userauth.login.LoginModel" />

        <variable
            name="loginViewModel"
            type="me.aleksandarzekovic.quizbox.ui.userauth.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_dark"
        tools:context=".ui.userauth.login.LoginFragment">

        <ImageView
            android:id="@+id/icon_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:elevation="@dimen/padding_size_medium"
            android:paddingLeft="@dimen/padding_size_medium"
            android:paddingRight="@dimen/padding_size_medium"
            android:src="@drawable/logoapp"
            app:layout_constraintBottom_toTopOf="@id/login_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_size_medium"
            android:layout_marginRight="@dimen/margin_size_medium"
            android:layout_marginBottom="@dimen/margin_size_medium"
            android:fontFamily="@font/ubuntu_r"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toTopOf="@+id/login_username"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_username"
            style="@style/TextInputLayoutAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_size_medium"
            android:layout_marginRight="@dimen/margin_size_medium"
            android:layout_marginBottom="@dimen/margin_size_medium"
            app:layout_constraintBottom_toTopOf="@+id/login_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:maxLines="1"
                android:text="@={loginModel.email}"
                android:textColor="@color/primary_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password"
            style="@style/TextInputLayoutAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_size_medium"
            android:layout_marginRight="@dimen/margin_size_medium"
            android:layout_marginBottom="@dimen/margin_size_small"
            app:layout_constraintBottom_toTopOf="@id/forgot_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:maxLines="1"
                android:inputType="textPassword"
                android:text="@={loginModel.password}"
                android:textColor="@color/primary_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_size_medium"
            android:layout_marginRight="@dimen/margin_size_medium"
            android:layout_marginBottom="@dimen/margin_size_medium"
            android:fontFamily="@font/ubuntu_r"
            android:text="@string/forgot_password"
            android:textColor="@color/primary"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_size_medium"
            android:layout_marginRight="@dimen/margin_size_medium"
            android:layout_marginBottom="@dimen/margin_size_medium"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> loginViewModel.onClickLogIn(loginModel.email.toString(), loginModel.password.toString())}"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/registration"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_size_medium"
            android:layout_marginRight="@dimen/margin_size_medium"
            android:layout_marginBottom="@dimen/margin_size_medium"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/ubuntu_r"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
