<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="email"
            type="String" />

        <variable
            name="respMessage"
            type="String" />

        <variable
            name="resetPasswordViewModel"
            type="me.aleksandarzekovic.quizbox.ui.userauth.resetpassword.ResetPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_dark"
        tools:context=".ui.userauth.resetpassword.ResetPasswordFragment">

        <ImageView
            android:id="@+id/reset_return_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_size_medium"
            android:layout_marginTop="@dimen/margin_size_medium"
            android:contentDescription="@string/alt_photo"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/reset_applogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_small"
            android:contentDescription="@string/app_name"
            android:elevation="@dimen/margin_size_medium"
            android:paddingLeft="@dimen/margin_size_medium"
            android:paddingRight="@dimen/margin_size_medium"
            android:src="@drawable/logoapp"
            app:layout_constraintBottom_toTopOf="@id/reset_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reset_return_arrow" />

        <TextView
            android:id="@+id/reset_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_large"
            android:fontFamily="@font/ubuntu_r"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toTopOf="@id/reset_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reset_applogo" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reset_mail"
            style="@style/TextInputLayoutAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_size_medium"
            android:layout_marginTop="@dimen/margin_size_medium"
            android:layout_marginRight="@dimen/margin_size_medium"
            android:layout_marginBottom="@dimen/margin_size_medium"
            app:layout_constraintBottom_toTopOf="@id/reset_pw_progress_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_r"
                android:hint="@string/email_hint"
                android:maxLines="1"
                android:text="@={email}"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/reset_pw_progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_size_small"
            android:indeterminate="true"
            android:indeterminateTint="@color/accent"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/reset_send_mail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/reset_send_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_size_medium"
            android:layout_marginTop="@dimen/margin_size_medium"
            android:layout_marginRight="@dimen/margin_size_medium"
            android:layout_marginBottom="@dimen/margin_size_medium"
            android:background="@color/primary"
            android:fontFamily="@font/ubuntu_r"
            android:onClick="@{() -> resetPasswordViewModel.resetPassword(email)}"
            android:text="@string/send_request"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/reset_response_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_size_medium"
            android:layout_marginTop="@dimen/margin_size_medium"
            android:layout_marginRight="@dimen/margin_size_medium"
            android:layout_marginBottom="@dimen/margin_size_medium"
            android:fontFamily="@font/ubuntu_r"
            android:text="@{respMessage}"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toTopOf="@id/reset_send_mail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/reset_return_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_size_medium"
            android:layout_marginTop="@dimen/margin_size_medium"
            android:layout_marginRight="@dimen/margin_size_medium"
            android:layout_marginBottom="@dimen/margin_size_medium"
            android:background="@color/primary"
            android:fontFamily="@font/ubuntu_r"
            android:text="@string/go_to_login"
            android:textColor="@color/white"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>