<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="scoreResults"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_dark"
        tools:context=".ui.quizresult.QuizResultFragment">

        <ImageView
            android:id="@+id/result_applogo"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logoapp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/result_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/your_score"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_applogo" />

        <TextView
            android:id="@+id/result_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@{scoreResults}"
            android:textColor="@color/accent"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_header" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/result_list_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/alt_photo"
            android:focusable="true"
            app:backgroundTint="@color/white"
            app:elevation="0dp"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/result_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_score"
            app:srcCompat="@drawable/ic_baseline_format_list_numbered_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/result_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:clickable="true"
            android:contentDescription="@string/alt_photo"
            android:focusable="true"
            app:backgroundTint="@color/white"
            app:elevation="0dp"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/result_list_result"
            app:layout_constraintTop_toBottomOf="@+id/result_score"
            app:srcCompat="@drawable/ic_baseline_home_45" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>